# pp_hw_03

./: .pylintrc  README.md  api.py  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml  pytest.yml  pytest_redis.yml
cache/: store.py
check/: check_auth.py  check_request.py  check_request_data.py
handlers/: handle_interests.py  handle_score.py  method_handler.py
helpers/: calculate_score.py  codes.py  get_interests.py  get_non_empty.py  get_score.py  get_set_interests.py
models/: methods.py  request_fields.py  request_interests.py  request_method.py  request_score.py
routes/: api_routes.py
tests/: fields.py  test.py  test_fields.py  test_store.py
tests/unit/: test_fields.py  test_get_score.py  test_store.py
